libqt6c/src/libqtableview.hpp

typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QHeaderView QHeaderView;
typedef struct QItemSelection QItemSelection;
typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QMetaObject QMetaObject;
typedef struct QModelIndex QModelIndex;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QSize QSize;
typedef struct QStyleOptionViewItem QStyleOptionViewItem;
typedef struct QTableView QTableView;
typedef struct QTimerEvent QTimerEvent;
typedef struct QWidget QWidget;
QTableView* QTableView_new(QWidget* parent);
QTableView* QTableView_new2();
QMetaObject* QTableView_MetaObject(const QTableView* self);
void QTableView_SetModel(QTableView* self, QAbstractItemModel* model);
void QTableView_SetRootIndex(QTableView* self, const QModelIndex* index);
void QTableView_SetSelectionModel(QTableView* self, QItemSelectionModel* selectionModel);
void QTableView_DoItemsLayout(QTableView* self);
QHeaderView* QTableView_HorizontalHeader(const QTableView* self);
QHeaderView* QTableView_VerticalHeader(const QTableView* self);
void QTableView_SetHorizontalHeader(QTableView* self, QHeaderView* header);
void QTableView_SetVerticalHeader(QTableView* self, QHeaderView* header);
int QTableView_RowViewportPosition(const QTableView* self, int row);
int QTableView_RowAt(const QTableView* self, int y);
void QTableView_SetRowHeight(QTableView* self, int row, int height);
int QTableView_RowHeight(const QTableView* self, int row);
int QTableView_ColumnViewportPosition(const QTableView* self, int column);
int QTableView_ColumnAt(const QTableView* self, int x);
void QTableView_SetColumnWidth(QTableView* self, int column, int width);
int QTableView_ColumnWidth(const QTableView* self, int column);
bool QTableView_IsRowHidden(const QTableView* self, int row);
void QTableView_SetRowHidden(QTableView* self, int row, bool hide);
bool QTableView_IsColumnHidden(const QTableView* self, int column);
void QTableView_SetColumnHidden(QTableView* self, int column, bool hide);
void QTableView_SetSortingEnabled(QTableView* self, bool enable);
bool QTableView_IsSortingEnabled(const QTableView* self);
bool QTableView_ShowGrid(const QTableView* self);
int QTableView_GridStyle(const QTableView* self);
void QTableView_SetGridStyle(QTableView* self, int style);
void QTableView_SetWordWrap(QTableView* self, bool on);
bool QTableView_WordWrap(const QTableView* self);
void QTableView_SetCornerButtonEnabled(QTableView* self, bool enable);
bool QTableView_IsCornerButtonEnabled(const QTableView* self);
QRect* QTableView_VisualRect(const QTableView* self, const QModelIndex* index);
void QTableView_ScrollTo(QTableView* self, const QModelIndex* index, int hint);
QModelIndex* QTableView_IndexAt(const QTableView* self, const QPoint* p);
void QTableView_SetSpan(QTableView* self, int row, int column, int rowSpan, int columnSpan);
int QTableView_RowSpan(const QTableView* self, int row, int column);
int QTableView_ColumnSpan(const QTableView* self, int row, int column);
void QTableView_ClearSpans(QTableView* self);
void QTableView_SelectRow(QTableView* self, int row);
void QTableView_SelectColumn(QTableView* self, int column);
void QTableView_HideRow(QTableView* self, int row);
void QTableView_HideColumn(QTableView* self, int column);
void QTableView_ShowRow(QTableView* self, int row);
void QTableView_ShowColumn(QTableView* self, int column);
void QTableView_ResizeRowToContents(QTableView* self, int row);
void QTableView_ResizeRowsToContents(QTableView* self);
void QTableView_ResizeColumnToContents(QTableView* self, int column);
void QTableView_ResizeColumnsToContents(QTableView* self);
void QTableView_SortByColumn(QTableView* self, int column, int order);
void QTableView_SetShowGrid(QTableView* self, bool show);
void QTableView_ScrollContentsBy(QTableView* self, int dx, int dy);
void QTableView_InitViewItemOption(const QTableView* self, QStyleOptionViewItem* option);
void QTableView_PaintEvent(QTableView* self, QPaintEvent* e);
void QTableView_TimerEvent(QTableView* self, QTimerEvent* event);
int QTableView_HorizontalOffset(const QTableView* self);
int QTableView_VerticalOffset(const QTableView* self);
QModelIndex* QTableView_MoveCursor(QTableView* self, int cursorAction, int modifiers);
void QTableView_SetSelection(QTableView* self, const QRect* rect, int command);
QRegion* QTableView_VisualRegionForSelection(const QTableView* self, const QItemSelection* selection);
libqt_list /* of QModelIndex* */ QTableView_SelectedIndexes(const QTableView* self);
void QTableView_UpdateGeometries(QTableView* self);
QSize* QTableView_ViewportSizeHint(const QTableView* self);
int QTableView_SizeHintForRow(const QTableView* self, int row);
int QTableView_SizeHintForColumn(const QTableView* self, int column);
void QTableView_VerticalScrollbarAction(QTableView* self, int action);
void QTableView_HorizontalScrollbarAction(QTableView* self, int action);
bool QTableView_IsIndexHidden(const QTableView* self, const QModelIndex* index);
void QTableView_SelectionChanged(QTableView* self, const QItemSelection* selected, const QItemSelection* deselected);
void QTableView_CurrentChanged(QTableView* self, const QModelIndex* current, const QModelIndex* previous);
void QTableView_RowMoved(QTableView* self, int row, int oldIndex, int newIndex);
void QTableView_ColumnMoved(QTableView* self, int column, int oldIndex, int newIndex);
void QTableView_RowResized(QTableView* self, int row, int oldHeight, int newHeight);
void QTableView_ColumnResized(QTableView* self, int column, int oldWidth, int newWidth);
void QTableView_RowCountChanged(QTableView* self, int oldCount, int newCount);
void QTableView_ColumnCountChanged(QTableView* self, int oldCount, int newCount);
void QTableView_Delete(QTableView* self);