QtBeef/src/Qt/qtableview.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QTableView
// --------------------------------------------------------------
[CRepr]
struct QTableView_Ptr: void
{
}
extension CQt
{
	[LinkName("QTableView_new")]
	public static extern QTableView_Ptr* QTableView_new(QWidget_Ptr* parent);
	[LinkName("QTableView_new2")]
	public static extern QTableView_Ptr* QTableView_new2();
	[LinkName("QTableView_Delete")]
	public static extern void QTableView_Delete(QTableView_Ptr* self);
	[LinkName("QTableView_MetaObject")]
	public static extern QMetaObject_Ptr* QTableView_MetaObject(QTableView_Ptr* self);
	[LinkName("QTableView_Qt_Metacast")]
	public static extern void* QTableView_Qt_Metacast(QTableView_Ptr* self, c_char* param1);
	[LinkName("QTableView_Qt_Metacall")]
	public static extern c_int QTableView_Qt_Metacall(QTableView_Ptr* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QTableView_Tr")]
	public static extern libqt_string QTableView_Tr(c_char* s);
	[LinkName("QTableView_SetModel")]
	public static extern void QTableView_SetModel(QTableView_Ptr* self, QAbstractItemModel_Ptr* model);
	[LinkName("QTableView_SetRootIndex")]
	public static extern void QTableView_SetRootIndex(QTableView_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QTableView_SetSelectionModel")]
	public static extern void QTableView_SetSelectionModel(QTableView_Ptr* self, QItemSelectionModel_Ptr* selectionModel);
	[LinkName("QTableView_DoItemsLayout")]
	public static extern void QTableView_DoItemsLayout(QTableView_Ptr* self);
	[LinkName("QTableView_HorizontalHeader")]
	public static extern QHeaderView_Ptr* QTableView_HorizontalHeader(QTableView_Ptr* self);
	[LinkName("QTableView_VerticalHeader")]
	public static extern QHeaderView_Ptr* QTableView_VerticalHeader(QTableView_Ptr* self);
	[LinkName("QTableView_SetHorizontalHeader")]
	public static extern void QTableView_SetHorizontalHeader(QTableView_Ptr* self, QHeaderView_Ptr* header);
	[LinkName("QTableView_SetVerticalHeader")]
	public static extern void QTableView_SetVerticalHeader(QTableView_Ptr* self, QHeaderView_Ptr* header);
	[LinkName("QTableView_RowViewportPosition")]
	public static extern c_int QTableView_RowViewportPosition(QTableView_Ptr* self, c_int row);
	[LinkName("QTableView_RowAt")]
	public static extern c_int QTableView_RowAt(QTableView_Ptr* self, c_int y);
	[LinkName("QTableView_SetRowHeight")]
	public static extern void QTableView_SetRowHeight(QTableView_Ptr* self, c_int row, c_int height);
	[LinkName("QTableView_RowHeight")]
	public static extern c_int QTableView_RowHeight(QTableView_Ptr* self, c_int row);
	[LinkName("QTableView_ColumnViewportPosition")]
	public static extern c_int QTableView_ColumnViewportPosition(QTableView_Ptr* self, c_int column);
	[LinkName("QTableView_ColumnAt")]
	public static extern c_int QTableView_ColumnAt(QTableView_Ptr* self, c_int x);
	[LinkName("QTableView_SetColumnWidth")]
	public static extern void QTableView_SetColumnWidth(QTableView_Ptr* self, c_int column, c_int width);
	[LinkName("QTableView_ColumnWidth")]
	public static extern c_int QTableView_ColumnWidth(QTableView_Ptr* self, c_int column);
	[LinkName("QTableView_IsRowHidden")]
	public static extern bool QTableView_IsRowHidden(QTableView_Ptr* self, c_int row);
	[LinkName("QTableView_SetRowHidden")]
	public static extern void QTableView_SetRowHidden(QTableView_Ptr* self, c_int row, bool hide);
	[LinkName("QTableView_IsColumnHidden")]
	public static extern bool QTableView_IsColumnHidden(QTableView_Ptr* self, c_int column);
	[LinkName("QTableView_SetColumnHidden")]
	public static extern void QTableView_SetColumnHidden(QTableView_Ptr* self, c_int column, bool hide);
	[LinkName("QTableView_SetSortingEnabled")]
	public static extern void QTableView_SetSortingEnabled(QTableView_Ptr* self, bool enable);
	[LinkName("QTableView_IsSortingEnabled")]
	public static extern bool QTableView_IsSortingEnabled(QTableView_Ptr* self);
	[LinkName("QTableView_ShowGrid")]
	public static extern bool QTableView_ShowGrid(QTableView_Ptr* self);
	[LinkName("QTableView_GridStyle")]
	public static extern Qt_PenStyle QTableView_GridStyle(QTableView_Ptr* self);
	[LinkName("QTableView_SetGridStyle")]
	public static extern void QTableView_SetGridStyle(QTableView_Ptr* self, Qt_PenStyle style);
	[LinkName("QTableView_SetWordWrap")]
	public static extern void QTableView_SetWordWrap(QTableView_Ptr* self, bool on);
	[LinkName("QTableView_WordWrap")]
	public static extern bool QTableView_WordWrap(QTableView_Ptr* self);
	[LinkName("QTableView_SetCornerButtonEnabled")]
	public static extern void QTableView_SetCornerButtonEnabled(QTableView_Ptr* self, bool enable);
	[LinkName("QTableView_IsCornerButtonEnabled")]
	public static extern bool QTableView_IsCornerButtonEnabled(QTableView_Ptr* self);
	[LinkName("QTableView_VisualRect")]
	public static extern QRect_Ptr QTableView_VisualRect(QTableView_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QTableView_ScrollTo")]
	public static extern void QTableView_ScrollTo(QTableView_Ptr* self, QModelIndex_Ptr* index, QAbstractItemView_ScrollHint hint);
	[LinkName("QTableView_IndexAt")]
	public static extern QModelIndex_Ptr QTableView_IndexAt(QTableView_Ptr* self, QPoint_Ptr* p);
	[LinkName("QTableView_SetSpan")]
	public static extern void QTableView_SetSpan(QTableView_Ptr* self, c_int row, c_int column, c_int rowSpan, c_int columnSpan);
	[LinkName("QTableView_RowSpan")]
	public static extern c_int QTableView_RowSpan(QTableView_Ptr* self, c_int row, c_int column);
	[LinkName("QTableView_ColumnSpan")]
	public static extern c_int QTableView_ColumnSpan(QTableView_Ptr* self, c_int row, c_int column);
	[LinkName("QTableView_ClearSpans")]
	public static extern void QTableView_ClearSpans(QTableView_Ptr* self);
	[LinkName("QTableView_SelectRow")]
	public static extern void QTableView_SelectRow(QTableView_Ptr* self, c_int row);
	[LinkName("QTableView_SelectColumn")]
	public static extern void QTableView_SelectColumn(QTableView_Ptr* self, c_int column);
	[LinkName("QTableView_HideRow")]
	public static extern void QTableView_HideRow(QTableView_Ptr* self, c_int row);
	[LinkName("QTableView_HideColumn")]
	public static extern void QTableView_HideColumn(QTableView_Ptr* self, c_int column);
	[LinkName("QTableView_ShowRow")]
	public static extern void QTableView_ShowRow(QTableView_Ptr* self, c_int row);
	[LinkName("QTableView_ShowColumn")]
	public static extern void QTableView_ShowColumn(QTableView_Ptr* self, c_int column);
	[LinkName("QTableView_ResizeRowToContents")]
	public static extern void QTableView_ResizeRowToContents(QTableView_Ptr* self, c_int row);
	[LinkName("QTableView_ResizeRowsToContents")]
	public static extern void QTableView_ResizeRowsToContents(QTableView_Ptr* self);
	[LinkName("QTableView_ResizeColumnToContents")]
	public static extern void QTableView_ResizeColumnToContents(QTableView_Ptr* self, c_int column);
	[LinkName("QTableView_ResizeColumnsToContents")]
	public static extern void QTableView_ResizeColumnsToContents(QTableView_Ptr* self);
	[LinkName("QTableView_SortByColumn")]
	public static extern void QTableView_SortByColumn(QTableView_Ptr* self, c_int column, Qt_SortOrder order);
	[LinkName("QTableView_SetShowGrid")]
	public static extern void QTableView_SetShowGrid(QTableView_Ptr* self, bool show);
	[LinkName("QTableView_RowMoved")]
	public static extern void QTableView_RowMoved(QTableView_Ptr* self, c_int row, c_int oldIndex, c_int newIndex);
	[LinkName("QTableView_ColumnMoved")]
	public static extern void QTableView_ColumnMoved(QTableView_Ptr* self, c_int column, c_int oldIndex, c_int newIndex);
	[LinkName("QTableView_RowResized")]
	public static extern void QTableView_RowResized(QTableView_Ptr* self, c_int row, c_int oldHeight, c_int newHeight);
	[LinkName("QTableView_ColumnResized")]
	public static extern void QTableView_ColumnResized(QTableView_Ptr* self, c_int column, c_int oldWidth, c_int newWidth);
	[LinkName("QTableView_RowCountChanged")]
	public static extern void QTableView_RowCountChanged(QTableView_Ptr* self, c_int oldCount, c_int newCount);
	[LinkName("QTableView_ColumnCountChanged")]
	public static extern void QTableView_ColumnCountChanged(QTableView_Ptr* self, c_int oldCount, c_int newCount);
	[LinkName("QTableView_ScrollContentsBy")]
	public static extern void QTableView_ScrollContentsBy(QTableView_Ptr* self, c_int dx, c_int dy);
	[LinkName("QTableView_InitViewItemOption")]
	public static extern void QTableView_InitViewItemOption(QTableView_Ptr* self, QStyleOptionViewItem_Ptr* option);
	[LinkName("QTableView_PaintEvent")]
	public static extern void QTableView_PaintEvent(QTableView_Ptr* self, QPaintEvent_Ptr* e);
	[LinkName("QTableView_TimerEvent")]
	public static extern void QTableView_TimerEvent(QTableView_Ptr* self, QTimerEvent_Ptr* event);
	[LinkName("QTableView_HorizontalOffset")]
	public static extern c_int QTableView_HorizontalOffset(QTableView_Ptr* self);
	[LinkName("QTableView_VerticalOffset")]
	public static extern c_int QTableView_VerticalOffset(QTableView_Ptr* self);
	[LinkName("QTableView_MoveCursor")]
	public static extern QModelIndex_Ptr QTableView_MoveCursor(QTableView_Ptr* self, QAbstractItemView_CursorAction cursorAction, void* modifiers);
	[LinkName("QTableView_SetSelection")]
	public static extern void QTableView_SetSelection(QTableView_Ptr* self, QRect_Ptr* rect, void* command);
	[LinkName("QTableView_VisualRegionForSelection")]
	public static extern QRegion_Ptr QTableView_VisualRegionForSelection(QTableView_Ptr* self, QItemSelection_Ptr* selection);
	[LinkName("QTableView_SelectedIndexes")]
	public static extern void* QTableView_SelectedIndexes(QTableView_Ptr* self);
	[LinkName("QTableView_UpdateGeometries")]
	public static extern void QTableView_UpdateGeometries(QTableView_Ptr* self);
	[LinkName("QTableView_ViewportSizeHint")]
	public static extern QSize_Ptr QTableView_ViewportSizeHint(QTableView_Ptr* self);
	[LinkName("QTableView_SizeHintForRow")]
	public static extern c_int QTableView_SizeHintForRow(QTableView_Ptr* self, c_int row);
	[LinkName("QTableView_SizeHintForColumn")]
	public static extern c_int QTableView_SizeHintForColumn(QTableView_Ptr* self, c_int column);
	[LinkName("QTableView_VerticalScrollbarAction")]
	public static extern void QTableView_VerticalScrollbarAction(QTableView_Ptr* self, c_int action);
	[LinkName("QTableView_HorizontalScrollbarAction")]
	public static extern void QTableView_HorizontalScrollbarAction(QTableView_Ptr* self, c_int action);
	[LinkName("QTableView_IsIndexHidden")]
	public static extern bool QTableView_IsIndexHidden(QTableView_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QTableView_SelectionChanged")]
	public static extern void QTableView_SelectionChanged(QTableView_Ptr* self, QItemSelection_Ptr* selected, QItemSelection_Ptr* deselected);
	[LinkName("QTableView_CurrentChanged")]
	public static extern void QTableView_CurrentChanged(QTableView_Ptr* self, QModelIndex_Ptr* current, QModelIndex_Ptr* previous);
	[LinkName("QTableView_Tr2")]
	public static extern libqt_string QTableView_Tr2(c_char* s, c_char* c);
	[LinkName("QTableView_Tr3")]
	public static extern libqt_string QTableView_Tr3(c_char* s, c_char* c, c_int n);
}
